--- a/front/src/index.html
+++ b/front/src/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
 
-  <media-organizer-root>
-    <div class="center">
-      <h1 class="mat-display-1">Chargement, veuillez patienter ...</h1>
-      <mat-spinner></mat-spinner>
-    </div>
-  </media-organizer-root>
+<media-organizer-root class="fill-remaining-space">
+  <div class="center">
+    <h1 class="mat-display-1">Chargement, veuillez patienter ...</h1>
+    <mat-spinner></mat-spinner>
+  </div>
+</media-organizer-root>
 </body>
 </html>
